--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.logrocket.io/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>window.LogRocket && window.LogRocket.init('yomkhw/soil-and-water');</script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/faviconplant.ico" />
     <meta
